--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-movie",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://quangchienptit.github.io/react-movie/",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@babel/core": "7.9.0",
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "iso-639-1": "^2.1.4",
@@ -76,6 +77,8 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
