--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.27.11",
+    "react-topbar-progress-indicator": "^4.1.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
